--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "your-app-name",
   "version": "1.0.0",
   "main": "index.js",
-"comment": "below to use import in your project", 
+  "comment": "below to use import in your project",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "nodemon": "^3.1.4"
   }
